Fix: index obscuring document on iOS version 15
Media prompts to hide the index for small screens, such as on mobile,
were being ignored by Apple devices running iOS 15 or earlier. These
devices lack support for range operators, so using range prefixes
instead fixes the issue.

See here for related dependency change:

https://github.com/grislyeye/vellum-doc/commit/f5a48564598b291cb0d33c0b3a3c0ee02c0de10a

--- a/assets/styles/illustrations.css
+++ b/assets/styles/illustrations.css
@@ -19,7 +19,7 @@ figure.portrait img {
   max-width: 170px;
 }
 
-@media (width <= 450px) {
+@media (max-width: 450px) {
   figure.portrait {
     float: none;
   }
